--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     ],
     "license": "ISC",
     "author": "Md. Mehedi Hasan",
-    "type": "commonjs",
-    "main": "index.js",
+    "main": "dist/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "nodemon",
+        "build": "tsc",
+        "start": "node dist/index.js",
+        "vercel-build": "tsc"
     },
     "dependencies": {
         "bcrypt": "^6.0.0",
