--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^9.0.0",
+        "multer": "^2.0.2",
         "nodemailer": "^7.0.11",
         "zod": "^4.1.13"
     },
@@ -34,6 +35,7 @@
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
         "@types/jsonwebtoken": "^9.0.10",
+        "@types/multer": "^2.0.0",
         "@types/node": "^24.10.1",
         "@types/nodemailer": "^7.0.4",
         "ts-node": "^10.9.2",
